# vbm_ws

./: README.md
install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
install/addvectors_srvcli/lib/addvectors_srvcli/: add_vec_client_exec  add_vec_server_exec
install/addvectors_srvcli/share/addvectors_srvcli/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/cpp_parameters/lib/cpp_parameters/: minimal_param_node
install/cpp_parameters/share/cpp_parameters/: package.sh
install/cpp_pubsub/lib/cpp_pubsub/: listener  talker
install/cpp_pubsub/share/cpp_pubsub/: local_setup.sh  package.sh
install/cpp_srvcli/lib/cpp_srvcli/: client  server
install/cpp_srvcli/share/cpp_srvcli/: local_setup.sh  package.sh  package.xml
install/more_interfaces/lib/more_interfaces/: publish_address_book
install/more_interfaces/share/more_interfaces/: package.sh  package.xml
install/opencv_test/lib/opencv_test/: opencv_test_1  opencv_test_2
install/opencv_test/share/opencv_test/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/polygon_base/share/polygon_base/: package.sh
log/: latest_build  latest_list
src/addvectors_srvcli/: CMakeLists.txt
src/addvectors_srvcli/src/: add_vectors_client_src.cpp  add_vectors_server_src.cpp
src/addvectors_srvcli/srv/: AddVectorsSrv.srv
src/cpp_parameters/: package.xml
src/cpp_pubsub/: CMakeLists.txt
src/cpp_pubsub/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/cpp_pubsub/log/: latest_build
src/cpp_srvcli/: CMakeLists.txt
src/cpp_srvcli/install/: local_setup.sh  setup.sh
src/cpp_srvcli/log/: latest_build
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
src/log/: latest_build
src/more_interfaces/: CMakeLists.txt
src/opencv_test/src/: test2.cpp
src/tutorial_interfaces/: package.xml
(+67 files in other folders)
